# cw-app

./: Dockerfile  build.sh  docker-compose.yml
app/: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  mat.local.dev.csr
app/src/: main.rs
app/src/data/: routes.rs
app/src/templates/: fourofour.rs  index.rs  robots.rs  sitemap.rs
app/static/: index.html  index.min.css  index.min.js  index.min.js.map
