[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.130", features = ["derive"] }
actix-web = { version = "4", features = ["openssl", "rustls"] }
actix-files = "*"
actix-cors = "*"
openssl = { version = "0.10.35", features = ["vendored"] }
cargo-watch = "8.5.2"
fake = "2.9.2"
serde_json = "1.0.68"
rand = "0.8.4"
maud = { version = "*", features = ["actix-web"] }
rustls = "0.20.4"
rustls-pemfile = "1.0.0"
automod = "1.0"